--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "senna-bot",
+  "name": "199",
   "description": "Customizable WhatsApp Bot",
-  "repository": "https://github.com/FG98F/senna-bot",
+  "repository": "https://github.com/Whatsapp1231234/199",
   "logo": "https://i.ibb.co/dG6rm49/fg-logo.png",
   "keywords": ["bot", "whatsapp", "whatsapp-bot", "senna", "senna bot", "dylux-bot"]
 }
